.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:20:48 **** Incremental Build of configuration Debug for project EJERCICIO 8-1.2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 8-1.2.o" "..\\src\\EJERCICIO 8-1.2.c" 
..\src\EJERCICIO 8-1.2.c:192:5: warning: "/*" within comment [-Wcomment]
     /*if(array[i]>array[j])
      
gcc -o "EJERCICIO 8-1.2.exe" "src\\EJERCICIO 8-1.2.o" "src\\calculos.o" "src\\ingresos.o" 
20:20:59 **** Incremental Build of configuration Debug for project EJERCICIO 8-1.2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 8-1.2.o" "..\\src\\EJERCICIO 8-1.2.c" 
gcc -o "EJERCICIO 8-1.2.exe" "src\\EJERCICIO 8-1.2.o" "src\\calculos.o" "src\\ingresos.o" 
20:22:03 **** Incremental Build of configuration Debug for project EJERCICIO 8-1.2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 8-1.2.o" "..\\src\\EJERCICIO 8-1.2.c" 
..\src\EJERCICIO 8-1.2.c: In function 'main':
..\src\EJERCICIO 8-1.2.c:105:5: error: 'else' without a previous 'if'
     else
     ^~~~
20:22:15 **** Incremental Build of configuration Debug for project EJERCICIO 8-1.2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 8-1.2.o" "..\\src\\EJERCICIO 8-1.2.c" 
gcc -o "EJERCICIO 8-1.2.exe" "src\\EJERCICIO 8-1.2.o" "src\\calculos.o" "src\\ingresos.o" 
20:23:02 **** Incremental Build of configuration Debug for project EJERCICIO 8-1.2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 8-1.2.o" "..\\src\\EJERCICIO 8-1.2.c" 
gcc -o "EJERCICIO 8-1.2.exe" "src\\EJERCICIO 8-1.2.o" "src\\calculos.o" "src\\ingresos.o" 
20:24:37 **** Incremental Build of configuration Debug for project EJERCICIO 8-1.2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 8-1.2.o" "..\\src\\EJERCICIO 8-1.2.c" 
gcc -o "EJERCICIO 8-1.2.exe" "src\\EJERCICIO 8-1.2.o" "src\\calculos.o" "src\\ingresos.o" 
20:25:39 **** Incremental Build of configuration Debug for project EJERCICIO 8-1.2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 8-1.2.o" "..\\src\\EJERCICIO 8-1.2.c" 
gcc -o "EJERCICIO 8-1.2.exe" "src\\EJERCICIO 8-1.2.o" "src\\calculos.o" "src\\ingresos.o" 
Info: Nothing to build for EJERCICIO 8-1.2
